tests/preproc/if/fail005.ds
#if true
#else
#else
#endif

#if false
#elif
#endif

#if true
#else
#elif false
#endif